--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@ p {
   width: 197px;
   height: 196px;
   display: inline-block;
-  background-image: url(/public/img/pictos-weather-196.png);
+  background-image: url(public/img/pictos-weather-196.png);
   background-repeat: no-repeat;
 }
 
@@ -95,7 +95,7 @@ p {
   height: 96px;
   margin: 20px;
   display: inline-block;
-  background-image: url(/public/img/daynight-pictos.png);
+  background-image: url(public/img/daynight-pictos.png);
   background-repeat: no-repeat;
 }
 
@@ -111,7 +111,7 @@ p {
   width: 100%;
   height: 85%;
   position: relative;
-  background-image: url(/public/img/compass.png);
+  background-image: url(public/img/compass.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -124,7 +124,7 @@ p {
 }
 
 .mini-picto-weather {
-  background-image: url(/public/img/minipictos.png);
+  background-image: url(public/img/minipictos.png);
   background-repeat: no-repeat;
   display: inline-block;
   width: 96px;
