--- a/assets/component/_sprite.scss
+++ b/assets/component/_sprite.scss
@@ -3,7 +3,7 @@
   width: 197px;
   height: 196px;
   display: inline-block;
-  background-image: url(public/img/pictos-weather-196.png);
+  background-image: url(../../public/img/pictos-weather-196.png);
   background-repeat: no-repeat;
 }
 .picto-weather-storm {
@@ -33,7 +33,7 @@
   height: 96px;
   margin: 20px;
   display: inline-block;
-  background-image: url(public/img/daynight-pictos.png);
+  background-image: url(../../public/img/daynight-pictos.png);
   background-repeat: no-repeat;
 }
 .picto-daynight-moon {
@@ -47,7 +47,7 @@
   width: 100%;
   height: 85%;
   position: relative;
-  background-image: url(public/img/compass.png);
+  background-image: url(../../public/img/compass.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -59,7 +59,7 @@
 }
 //mini picto 7 jours
 .mini-picto-weather {
-  background-image: url(public/img/minipictos.png);
+  background-image: url(../../public/img/minipictos.png);
   background-repeat: no-repeat;
   display: inline-block;
   width: 96px;
