--- a/assets/component/_responsive.scss
+++ b/assets/component/_responsive.scss
@@ -1,4 +1,12 @@
 @media all and (max-width: 579px){
+    .background>img{
+        position: fixed;
+        z-index: -1;
+        background-position:center;
+        background-size:contain;
+        background-repeat: no-repeat;
+        }
+    
     .container {  display: grid;
         width: 99%;
         height: 150vh;
