--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,6 +303,13 @@ h2 {
 }
 
 @media all and (max-width: 579px) {
+  .background > img {
+    position: fixed;
+    z-index: -1;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
   .container {
     display: grid;
     width: 99%;
