--- a/assets/component/_background.scss
+++ b/assets/component/_background.scss
@@ -4,6 +4,6 @@
     background-position:center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     }
