--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,7 +193,7 @@ p {
 
 .box {
   border: 1px solid rgba(0, 0, 0, 0.282);
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(0px);
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.275);
   -webkit-box-shadow: encart 34px 24px 28px -10px rgba(205, 186, 157, 0.874);
@@ -250,7 +250,7 @@ h2 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -306,9 +306,8 @@ h2 {
   .background > img {
     position: fixed;
     z-index: -1;
-    background-position: center;
+    background-position-y: bottom;
     background-size: contain;
-    background-repeat: no-repeat;
   }
   .container {
     display: grid;
