--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,7 +193,7 @@ p {
 
 .box {
   border: 1px solid rgba(0, 0, 0, 0.282);
-  backdrop-filter: blur(0px);
+  backdrop-filter: blur(1px);
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.275);
   -webkit-box-shadow: encart 34px 24px 28px -10px rgba(205, 186, 157, 0.874);
@@ -311,13 +311,14 @@ h2 {
   }
   .container {
     display: grid;
-    width: 99%;
+    margin: auto;
+    width: 95%;
     height: 150vh;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 0.5fr 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
     grid-auto-rows: 1fr;
-    gap: 3px 3px;
+    gap: 10px 10px;
     grid-auto-flow: row;
     grid-template-areas: "date-time date-time rectangle-empty rectangle-empty" "current current current current" "current current current current" "current current current current" "current current current current" "current current current current" "current current current current" "day-night day-night boussole boussole" "day-night day-night boussole boussole" "day-night day-night boussole boussole" "day-night day-night boussole boussole" "hours-weather hours-weather hours-weather hours-weather" "hours-weather hours-weather hours-weather hours-weather" "hours-weather hours-weather hours-weather hours-weather" "weather-week weather-week weather-week weather-week" "weather-week weather-week weather-week weather-week" "weather-week weather-week weather-week weather-week" "weather-week weather-week weather-week weather-week";
   }
